@@ -2,9 +2,18 @@ Release Notes
 
 Food Fusion Api
 Version: v1.0.0
-Release Date: 18/07/2024
+Release Date: 07/08/2025
 
 New Features:
+
+You can now manage orders easily and efficiently!
+We've also added basic customer support to help resolve order-related issues quickly.
+
+We’ve just released two new features to streamline your operations:
+
+    Order Management: Easily track and manage customer orders.
+
+    Simple Customer Support: Provide fast and effective assistance for order-related questions and issues.
 
 Bugfixes:
 
